# zotu

./: .gitignore  Cargo.toml  build.rs  config.json  config.toml  config.yaml  metadata.db  metadata.db-shm  metadata.db-wal
.mimocode/plans/: 1781224986201-gentle-wolf.md
docs/compose/plans/: 2026-06-12-audio-backend-refactor.md  2026-06-12-ffmpeg-backend.md
docs/compose/specs/: 2026-06-12-ffmpeg-backend-design.md
src/: app.rs  application.rs  assets.rs  audio.rs  components.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  main2.rs  theme.rs  ui.rs  util.rs
src/application/: action.rs  controller.rs  repository.rs  state.rs
src/audio/: engine.rs  ffmpeg.rs  output.rs  player.rs  playlist.rs
src/audio/ffmpeg/: bridge.c  decoder.rs  ffi.rs  helpers.c  resampler.rs
src/components/: cover.rs  menu.rs  mod.rs  now_playing.rs  playbar.rs  playerdetail.rs  search.rs  setting.rs  sidebar.rs  songview.rs  titlebar.rs
src/db/: database.rs  db.rs  dbstate.rs  library_state.rs  metadata.rs  mod.rs  sqlite_repository.rs  table.rs
src/ffmpeg/: ffi.rs  mod.rs
src/play/: metadata.rs  mod.rs  player.rs
src/ui/: album_list.rs  context_menu.rs  menu.rs  now_playing.rs  play_bar.rs  root.rs  search.rs  search_box.rs  settings.rs  sidebar.rs  title_bar.rs
