[package]
name = "zotu"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam = "0.8.4"
gpui = "0.2.2"
gpui-component = "0.5.0"
lofty = "0.22.4"
rand = "0.9"
rodio = { version = "0.21.1", features = [
    "crossbeam-channel",
    "symphonia-all",
] }
rusqlite = "0.38.0"
uuid = { version = "1.19.0", features = ["v4"] }
