[package]
name = "zotu"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam = "0.8.4"
gpui = "0.2.2"
image = "0.25.9"
lofty = "0.21"
rand = "0.9"
rfd = "0.17.2"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.10"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.19.0", features = ["v4"] }
walkdir = "2.5.0"
cpal = "0.15"
anyhow = "1.0"

[build-dependencies]
cc = "1"
pkg-config = "0.3"
